# elidune-server

./: AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.complete  README-docker.md  README.md  docker-compose.complete.yml  docker-compose.yml
.github/workflows/: docker-publish.yml
config/: sample.toml
data/email_templates/: 2fa_code.english.json  2fa_code.french.json  event_announcement.english.json  event_announcement.french.json  password_reset.english.json  password_reset.french.json  recovery_code.english.json  recovery_code.french.json
database/: dump-db.sh  import-db.sh  init_database.sql  migrate_data.py
docker/: .env.example  Dockerfile  Dockerfile.all-in-one  Dockerfile.complete  config.docker.toml  docker-compose.all-in-one.yml  docker-compose.complete.yml  docker-compose.yml  nginx-complete.conf  nginx-host-elidune.conf  supervisord.conf  wait-and-start-server.sh
docs/: README-api-access-rights.md  README-api-json-shapes.md  catalog_stats_frontend_guide.md  reverse-proxy.md  stats_mapping.md
migrations/: 001_add_2fa_fields.sql  004_account_types_events_rights.sql  005_email_templates.sql  006_rename_borrows_rights_to_holds_rights.sql  007_update_accounts_rights.sql  008_loans_settings_renew_at.sql  009_public_type_loan_settings_renew_at.sql  009_remove_subscription_type_id.sql  010_loans_settings_defaults.sql  010_reservations.sql  010_stats_export_schema.sql  011_drop_nb_max_total.sql  011_rename_reservations_to_holds.sql  011_sources_archive.sql  012_drop_public_types_loan_columns.sql  012_series_collections_specimens.sql  013_remove_items_empty_title1.sql  014_sources_default.sql  015_remove_items_nb_specimens.sql  016_rename_specimen_cote_to_call_number.sql  017_rename_items_identification_to_isbn.sql  018_rename_specimen_identification_to_barcode.sql  019_remove_specimens_is_archive.sql  020_refonte_marc_schema.sql  021_ultimate_schema.sql  022_remove_loans_item_id.sql  023_primary_foreign_keys_bigint.sql  033_public_types.sql  034_rename_date_columns.sql  035_users_language_canonical.sql  037_library_info.sql  038_events_announcement_sent_at.sql  042_items_audience_type_normalize.sql  043_item_authors_role_to_function.sql
scripts/: backup-volumes.sh  build-complete-image.sh  build-db-image.sh  deploy-image.sh  diagnose-nginx.sh  docker-compose-helper.sh  dump-db.sh  export-complete-image.sh  export-image.sh  fix-migration-version.sh  fix-migrations.sh  generate_large_dataset.py  import-complete-image.sh  import-db.sh  import-image.sh  init_database.sql  migrate-to-volumes.sh  migrate_data.py  prepare-deployment.sh  reset-migrations.sh  restore-volumes.sh  sample_legacy_data.sql  setup-nginx-host.sh  start-complete.sh  start-with-volumes.sh
src/: config.rs  dynamic_config.rs  email.rs  email_templates.rs  error.rs  hold_email.rs  lib.rs  main.rs
src/api/: account_types.rs  admin_config.rs  auth.rs  batch.rs  biblios.rs  email_templates.rs  equipment.rs  events.rs  health.rs  holds.rs  items.rs  library_info.rs  loans.rs  maintenance.rs  mod.rs  opac.rs  openapi.rs  public_types.rs  schedules.rs  settings.rs  sources.rs  sse.rs  stats.rs  users.rs  visitor_counts.rs  z3950.rs
src/marc/: mod.rs  parser.rs  translator.rs
src/models/: account_type.rs  audit.rs  author.rs  biblio.rs  enums.rs  equipment.rs  event.rs  hold.rs  import_report.rs  item.rs  item_author.rs  loan.rs  mod.rs  public_type.rs  remote_item.rs  schedule.rs  source.rs  specimen.rs  user.rs  visitor_count.rs
src/repository/: account_types.rs  audit_log.rs  biblios.rs  email_templates.rs  equipment.rs  events.rs  holds.rs  items.rs  library_info.rs  loans.rs  mod.rs  public_types.rs  schedules.rs  settings.rs  sources.rs  users.rs  visitor_counts.rs  z3950.rs
src/repository/stats/: dashboard.rs  executor.rs  mod.rs  saved_queries.rs
src/services/: account_types_catalog.rs  audit.rs  auth.rs  catalog.rs  email.rs  email_templates.rs  equipment.rs  events.rs  holds.rs  library_info.rs  loans.rs  mod.rs  public_types.rs  redis.rs  reminders.rs  scheduler.rs  schedules.rs  search.rs  settings.rs  sources.rs  stats.rs  users.rs  visitor_counts.rs  z3950.rs
src/services/stats/: dashboard.rs  schema.rs
tests/integration/: api_tests.rs  mod.rs
