[package]
name = "elidune-server"
version = "1.2.0"
edition = "2021"
authors = ["Jean Collonville <jcollonville@b-612.fr>"]
description = "Elidune - Library Management System Server"
license = "AGPL-3.0"
repository = "https://github.com/elidune/elidune-server"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["json"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json", "rust_decimal"] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"
totp-lite = "2.0"
lettre = "0.11"
rand = "0.8"
base32 = "0.4"
base64 = "0.21"
sha1 = "0.10"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tracing-journald = "0.3"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# OpenAPI documentation
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }


snowflaked = "1.0"
rust_decimal = { version = "1", features = ["serde"] }
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
async-trait = "0.1"
tower_governor = { version = "0.3", features = ["axum"] }
z3950-rs = "1.0.2"
# z3950-rs = { path = "../z3950-rs" }
regex = "1"
meilisearch-sdk = "0.32"
indexmap = { version = "2", features = ["serde"] }
once_cell = "1.19"
sha2 = "0.10"
hex = "0.4"
unicode-normalization = "0.1"

[dev-dependencies]
mockall = "0.13"
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }

[profile.release]
lto = true
codegen-units = 1
strip = true